# jigsaw-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-release.yaml  docker-compose.yaml
.github/workflows/: push.yml
jigsaw-backend/: Cargo.toml  Config.toml  Dockerfile
jigsaw-backend/public/: index.html  index.js  index.pck
jigsaw-backend/public/old/: index.html  puzzle.html  puzzle.js
jigsaw-backend/src/: auth.rs  config.rs  error.rs  main.rs  router.rs  ws_state.rs
jigsaw-backend/src/model/: mod.rs  user.rs  ws_message.rs
jigsaw-backend/src/router/: asset.rs  ws.rs
jigsaw-backend/src/router/api/: mod.rs  puzzle.rs
jigsaw-backend/src/websocket/: error.rs  handler.rs  message.rs  mod.rs  route.rs  state.rs  unauthorized_handler.rs
jigsaw-bot/: Cargo.toml  Dockerfile
jigsaw-bot/src/: bot.rs  config.rs  main.rs
jigsaw-common/: Cargo.toml
jigsaw-common/src/: lib.rs  redis_scheme.rs
jigsaw-common/src/model/: mod.rs  puzzle.rs
jigsaw-common/src/model/event/: mod.rs  puzzle_generated.rs
jigsaw-common/src/model/request/: generate_puzzle.rs  mod.rs
jigsaw-common/src/util/: config.rs  indexed.rs  mod.rs  named_instant.rs
jigsaw-game/: DefaultFont.tres  Icon.gd  Main.gd  Theme.tres  TilesContainer.gd  custom_shell.html  export_presets.cfg  main.tscn  project.godot
jigsaw-game/.import/: close.png-131a759e52bdfb1d846f0191ba3420f3.md5  close.png-131a759e52bdfb1d846f0191ba3420f3.stex  close.svg-e7e379778834dcd9a6b351e55e5a8183.md5  icon.png-76bdd34fa285ad26ceef87f8030a6b09.md5  icon.png-76bdd34fa285ad26ceef87f8030a6b09.stex
jigsaw-game/_old/: main.tscn
jigsaw-game/_old/scenes/: GameField.tscn  PuzzleGridCell.tscn  Tile.tscn
jigsaw-game/_old/scripts/: GameField.gd  Main.gd
jigsaw-game/common/: puzzle_meta.gd  vec_2_int.gd
jigsaw-game/components/fading_label/: FadingLabel.tscn  fading_label.gd
jigsaw-game/components/game/: Game.tscn  game.gd  tray.gd
jigsaw-game/components/game_manager/: GameManager.tscn  game_manager.gd
jigsaw-game/components/http_image/: HttpImage.tscn  http_image.gd
jigsaw-game/components/popup_result/: PopupResult.tscn  ScoreEntry.tscn  popup_result.gd  score_entry.gd
jigsaw-game/components/puzzle_grid_cell/: PuzzleGridCell.tscn  puzzle_grid_cell.gd
jigsaw-game/components/puzzle_piece/: PuzzlePiece.tscn  puzzle_piece.gd
jigsaw-game/components/web_socket_client/: WebSocketClient.tscn  WebSocketManager.tscn  web_socket_manager.gd
jigsaw-game/fonts/: ButtonFont.tres  DefaultFont.tres  MediumFont.tres  TitleFont.tres  close.png.import
jigsaw-game/global/config/: Config.tscn  config.gd
jigsaw-game/global/events/: Events.tscn  events.gd  icon.png.import
jigsaw-game/global/theme_manager/: ThemeManager.tscn  theme_manager.gd
jigsaw-game/scenes/: Config.tscn  GameField.tscn  HttpImage.tscn  PuzzleGridCell.tscn  ThemeManager.tscn  Tile.tscn  test.tscn
jigsaw-game/scenes/main/: Main.tscn
jigsaw-game/scripts/: DroppableArea.gd  GameContainer.gd  GameField.gd  GlobalState.gd  HttpImage.gd  PuzzleGridCell.gd  ThemeManager.gd  Tile.gd  Vector2Int.gd
jigsaw-generator/: Cargo.toml  Dockerfile
jigsaw-generator/src/: config.rs  generator.rs  jigsaw.rs  jigsaw_connections.rs  main.rs  mask.rs  storage.rs
jigsaw-pubsub/: .gitignore  Cargo.toml
jigsaw-pubsub/src/: config.rs  generator.rs  jigsaw.rs  jigsaw_connections.rs  main.rs  storage.rs
jigsaw-teloxide/: .gitignore  Cargo.toml
jigsaw-teloxide/src/: bot.rs  config.rs  main.rs  sub.rs
