[package]
name = "jigsaw-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jigsaw-common = { path = "../jigsaw-common" }
axum = { version = "0.6.20", features = ["ws", "headers"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
figment = { version = "0.10.10", features = ["env", "toml"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rmp-serde = "1.1.2"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs"] }
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
serde_json = "1.0.107"
shrinkwraprs = "0.3.0"
base64 = "0.21.4"
bytes = "1.5.0"
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
hex = "0.4.3"
urlencoding = "2.1.3"
itertools = "0.11.0"
ring = "0.16.20"
pipe-trait = "0.4.0"
chrono = "0.4.31"
