[package]
name = "jigsaw-teloxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jigsaw-common = { path = "../jigsaw-common" }
dotenvy = "0.15.7"
dptree = "0.3.0"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rmp-serde = "1.1.2"
redis = { version = "0.23.3", features = ["tokio-comp"] }
futures = "0.3.28"
