[package]
name = "jigsaw-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.10", features = ["toml", "env"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
shrinkwraprs = "0.3.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
