[package]
name = "jigsaw-pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
jigsaw-common = { path = "../jigsaw-common" }
async-trait = "0.1.73"
dotenvy = "0.15.7"
eyre = "0.6.8"
futures = "0.3.28"
image = "0.24.7"
path_macro = "1.0.0"
rayon = "1.8.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
shrinkwraprs = "0.3.0"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread", "sync", "macros"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
figment = { version = "0.10.10", features = ["env", "toml"] }
rmp-serde = "1.1.2"
log = "0.4.20"
env_logger = "0.10.0"
