[package]
name = "jigsaw-teloxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.8"
teloxide = "0.12.2"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
